<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipe_detail_view">Recipe Detail List</string>
    <string name="recipe_ingredients">Recipe ingredients</string>
    <string name="recipe_step_short_description">Recipe steps</string>

    <string name="recipe_previous_step">PREVIOUS</string>
    <string name="recipe_next_step">NEXT</string>
    <string name="recipe_step_label">Recipe step instruction</string>

    <string name="recipe_video_not_available">Video is not available!</string>

    <string name="recipe_step_detail_initializer">Select a step you would like to see from the left side</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownies">Brownies</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="cheesecake">Cheesecake</string>

    <string name="btn_ingredients">Update Ingredients</string>
    <string name="recipe_selection_label">Select a recipe for the ingredients</string>
</resources>
