<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="27dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/select_recipe_label"
        android:text="@string/recipe_selection_label"
        android:layout_marginBottom="7dp"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_nutella_pie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutella_pie"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_brownies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brownies"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_yellow_cake"
            android:text="@string/yellow_cake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_cheesecake"
            android:text="@string/cheesecake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <!--<Button
        android:id="@+id/enter_button"
        android:text="@string/btn_ingredients"
        android:layout_marginTop="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->
</LinearLayout>